# pv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  plan.json  plan.schema.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: DOCS.yml  config.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  publish.yml
docs/: CHANGELOG.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: index.rst
docs/guides/: cli.md  quickstart.md  schema.md
examples/: complex.json  simple.json
src/plan_view/: cli.py  decorators.py  formatting.py  io.py  plan.schema.json  state.py
src/plan_view/commands/: dashboard.py  edit.py  view.py
src/pv_tool/: __init__.py  cli.py  formatting.py  io.py
src/pv_tool/commands/: edit.py  view.py
tests/: BUILDERS.md  __init__.py  builders.py  conftest.py  test_bug_command.py  test_builder_demo.py  test_builders.py  test_cli.py  test_compact_command.py  test_decorators.py  test_defer_reason.py  test_dependencies.py  test_future_command.py  test_idea_command.py  test_task_id_generation.py
