[project]
name = "pv-tool"
version = "0.2.0"
description = "Pretty print plan.json for task tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Jacob Coffee", email = "jacob@z7x.org" }]
keywords = ["cli", "plan", "task-tracking", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

dependencies = ["jsonschema>=4.23"]

[project.scripts]
pv = "pv_tool.cli:main"

[project.urls]
Homepage = "https://github.com/JacobCoffee/pv"
Repository = "https://github.com/JacobCoffee/pv"

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
